# chip8-emulator

./: .gitignore  Cargo.toml  README.md  index.html
desktop_build/: Cargo.toml
desktop_build/src/: graphics.rs  input.rs  main.rs
src/: interpreter.rs  main.rs
src/interpreter/: error.rs  font.rs  graphics.rs  input.rs  instrs.rs  setup.rs
wasm_build/: Cargo.toml
wasm_build/src/: graphics.rs  input.rs  lib.rs
web/: .gitignore  chip8_wasm.js  chip8_wasm_bg.wasm  index.html  index.js
