[package]
name = "chip8"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
rand = { version = "0.10.0", features = ["wasm-bindgen"] }
sdl3 = { version = "0.17.3", features = ["build-from-source", "ttf", "raw-window-handle", "unsafe_textures"] }
