[package]
name = "chip8"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "^0.10.1"
getrandom = { version = "^0.4.2", features = ["wasm_js"] }
sdl3 = { version = "^0.17.3", features = ["build-from-source", "ttf", "raw-window-handle", "unsafe_textures"] }
