[package]
name = "chip8_wasm"
version = "1.0.0"
edition = "2024"

[dependencies]
chip8 = { path = "../" }
js-sys = "^0.3.95"
wasm-bindgen = "^0.2.118"
console_error_panic_hook = "0.1.7" # debug

[dependencies.web-sys]
version = "^0.3.95"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window"]

[lib]
crate-type = ["cdylib"]
